Some UI fixes, working on mobile friendly

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,6 +42,7 @@ footer {
 .dinoName {
   color: azure;
   font-family: 'Fredericka the Great', cursive;
+  font-size: 24px;
 }
 
 .adoptBtn {
